--- a/appview/pages/templates/repo/issues/issues.html
+++ b/appview/pages/templates/repo/issues/issues.html
@@ -13,8 +13,8 @@
         <a
             href="/{{ .RepoInfo.FullName }}/issues/new"
             class="btn text-sm flex items-center gap-2 no-underline hover:no-underline">
-            {{ i "plus" "w-4 h-4" }}
-            <span>new issue</span>
+            {{ i "circle-plus" "w-4 h-4" }}
+            <span>new</span>
         </a>
     </div>
     <div class="error" id="issues"></div>
