--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -24,8 +24,8 @@
             href="/{{ .RepoInfo.FullName }}/pulls/new"
             class="btn text-sm flex items-center gap-2 no-underline hover:no-underline dark:text-white dark:bg-gray-700 dark:hover:bg-gray-600"
         >
-            {{ i "git-pull-request" "w-4 h-4" }}
-            <span>new pull request</span>
+            {{ i "git-pull-request-create" "w-4 h-4" }}
+            <span>new</span>
         </a>
     </div>
     <div class="error" id="pulls"></div>
