add per-file diff stats
allow linking in diffs

--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -156,7 +156,7 @@
           {{ end }}
         </div>
     </details>
-    <hr class="md:hidden"/>
+    <hr class="md:hidden border-t border-gray-300 dark:border-gray-600"/>
     {{ end }}
   {{ end }}
 {{ end }}
