--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -146,7 +146,7 @@
                               <p
                                   class="hidden mt-1 text-sm cursor-text pb-2 dark:text-gray-300"
                               >
-                                  {{ nl2br (unwrapText (index $messageParts 1)) }}
+                                  {{ nl2br (index $messageParts 1) }}
                               </p>
                           {{ end }}
                       </div>
