--- a/appview/pages/templates/fragments/diff.html
+++ b/appview/pages/templates/fragments/diff.html
@@ -8,6 +8,26 @@
   {{ $this := $commit.This }}
   {{ $parent := $commit.Parent }}
 
+  <section class="mt-6 p-6 border border-gray-200 dark:border-gray-700 w-full mx-auto rounded bg-white dark:bg-gray-800 drop-shadow-sm">
+    <div class="diff-stat">
+      <div class="flex gap-2 items-center">
+        <strong class="text-sm uppercase dark:text-gray-200">Changed files</strong>
+        {{ block "statPill" $stat }} {{ end }}
+      </div>
+      <div class="overflow-x-auto">
+        {{ range $diff }}
+        <ul class="dark:text-gray-200">
+          {{ if .IsDelete }}
+          <li><a href="#file-{{ .Name.Old }}" class="dark:hover:text-gray-300">{{ .Name.Old }}</a></li>
+          {{ else }}
+          <li><a href="#file-{{ .Name.New }}" class="dark:hover:text-gray-300">{{ .Name.New }}</a></li>
+          {{ end }}
+        </ul>
+        {{ end }}
+      </div>
+    </div>
+  </section>
+
   {{ $last := sub (len $diff) 1 }}
   {{ range $idx, $hunk := $diff }}
   {{ with $hunk }}
@@ -33,17 +53,7 @@
                 <span class="bg-gray-100 text-gray-700 dark:bg-gray-700 dark:text-gray-300 {{ $markerstyle }}">MODIFIED</span>
                 {{ end }}
 
-                {{ $stat := .Stats }}
-                <div class="flex items-center font-mono text-sm">
-                  {{ if and $stat.Insertions $stat.Deletions }}
-                    <span class="rounded-l p-1 select-none bg-green-100 text-green-700 dark:bg-green-800/50 dark:text-green-400">+{{ $stat.Insertions }}</span>
-                    <span class="rounded-r p-1 select-none bg-red-100 text-red-700 dark:bg-red-800/50 dark:text-red-400">-{{ $stat.Deletions }}</span>
-                  {{ else if $stat.Insertions }}
-                    <span class="rounded p-1 select-none bg-green-100 text-green-700 dark:bg-green-800/50 dark:text-green-400">+{{ $stat.Insertions }}</span>
-                  {{ else if $stat.Deletions }}
-                    <span class="rounded p-1 select-none bg-red-100 text-red-700 dark:bg-red-800/50 dark:text-red-400">-{{ $stat.Deletions }}</span>
-                  {{ end }}
-                </div>
+                {{ block "statPill" .Stats }} {{ end }}
 
                 {{ if .IsDelete }}
                 <a class="dark:text-white whitespace-nowrap overflow-x-auto" {{if $this }}href="/{{ $repo }}/blob/{{ $this }}/{{ .Name.Old }}"{{end}}>
@@ -149,4 +159,17 @@
   </section>
   {{ end }}
   {{ end }}
+{{ end }}
+
+{{ define "statPill" }}
+  <div class="flex items-center font-mono text-sm">
+    {{ if and .Insertions .Deletions }}
+      <span class="rounded-l p-1 select-none bg-green-100 text-green-700 dark:bg-green-800/50 dark:text-green-400">+{{ .Insertions }}</span>
+      <span class="rounded-r p-1 select-none bg-red-100 text-red-700 dark:bg-red-800/50 dark:text-red-400">-{{ .Deletions }}</span>
+    {{ else if .Insertions }}
+      <span class="rounded p-1 select-none bg-green-100 text-green-700 dark:bg-green-800/50 dark:text-green-400">+{{ .Insertions }}</span>
+    {{ else if .Deletions }}
+      <span class="rounded p-1 select-none bg-red-100 text-red-700 dark:bg-red-800/50 dark:text-red-400">-{{ .Deletions }}</span>
+    {{ end }}
+  </div>
 {{ end }}
