appview: pages/templates/repo: make issues more consistent with pulls
- improve issue page icons and icon states
- make issue comments more like pull comments
- padding and spacing consistency across the board

--- a/appview/pages/templates/fragments/pullActions.html
+++ b/appview/pages/templates/fragments/pullActions.html
@@ -79,7 +79,7 @@
           hx-post="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/reopen"
           hx-swap="none"
           class="btn p-2 flex items-center gap-2">
-          {{ i "circle-dot" "w-4 h-4" }}
+          {{ i "refresh-ccw-dot" "w-4 h-4" }}
             <span>reopen</span>
         </button>
         {{ end }}
