appview: pages/templates/repo: make issues more consistent with pulls
- improve issue page icons and icon states
- make issue comments more like pull comments
- padding and spacing consistency across the board

--- a/appview/pages/templates/fragments/issueComment.html
+++ b/appview/pages/templates/fragments/issueComment.html
@@ -5,16 +5,7 @@
       {{ $owner := index $.DidHandleMap .OwnerDid }}
       <a href="/{{ $owner }}" class="no-underline hover:underline">{{ $owner }}</a>
 
-      <!-- show user "hats" -->
-      {{ $isIssueAuthor := eq .OwnerDid $.Issue.OwnerDid }}
-      {{ if $isIssueAuthor }}
-      <span class="before:content-['·']"></span>
-      <span class="rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
-        author
-      </span>
-      {{ end }}
-
-      <span class="before:content-['·']"></span>
+     <span class="before:content-['·']"></span>
       <a
           href="#{{ .CommentId }}"
           class="text-gray-500 hover:text-gray-500 hover:underline no-underline"
@@ -27,6 +18,14 @@
           {{ .Created | timeFmt }}
         {{ end }}
       </a>
+      
+      <!-- show user "hats" -->
+      {{ $isIssueAuthor := eq .OwnerDid $.Issue.OwnerDid }}
+      {{ if $isIssueAuthor }}
+      <span class="text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center">
+        author
+      </span>
+      {{ end }}
 
       {{ $isCommentOwner := and $.LoggedInUser (eq $.LoggedInUser.Did .OwnerDid) }}
       {{ if and $isCommentOwner (not .Deleted) }}
