--- a/appview/pages/templates/repo/pulls/pulls.html
+++ b/appview/pages/templates/repo/pulls/pulls.html
@@ -22,7 +22,7 @@
         </p>
         <a
             href="/{{ .RepoInfo.FullName }}/pulls/new"
-            class="btn text-sm flex items-center gap-2 no-underline hover:no-underline dark:text-white dark:bg-gray-700 dark:hover:bg-gray-600"
+            class="btn text-sm flex items-center gap-2 no-underline hover:no-underline"
         >
             {{ i "git-pull-request-create" "w-4 h-4" }}
             <span>new</span>
