--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -21,7 +21,7 @@
         {{ $icon = "git-merge" }}
     {{ end }}
 
-    <section>
+    <section class="mt-2">
         <div class="flex items-center gap-2">
             <div
                 id="state"
@@ -64,7 +64,7 @@
         </div>
 
         {{ if .Pull.Body }}
-            <article id="body" class="mt-2 prose dark:prose-invert">
+            <article id="body" class="mt-8 prose dark:prose-invert">
                 {{ .Pull.Body | markdown }}
             </article>
         {{ end }}
