--- a/appview/pages/templates/repo/fragments/diff.html
+++ b/appview/pages/templates/repo/fragments/diff.html
@@ -1,4 +1,4 @@
-{{ define "fragments/diff" }}
+{{ define "repo/fragments/diff" }}
 {{ $repo := index . 0 }}
 {{ $diff := index . 1 }}
 {{ $commit := $diff.Commit }}
