--- a/appview/pages/templates/repo/issues/fragments/issueComment.html
+++ b/appview/pages/templates/repo/issues/fragments/issueComment.html
@@ -1,4 +1,4 @@
-{{ define "fragments/issueComment" }}
+{{ define "repo/issues/fragments/issueComment" }}
   {{ with .Comment }}
   <div id="comment-container-{{.CommentId}}">
     <div class="flex items-center gap-2 mb-2 text-gray-500 text-sm">
