--- a/appview/pages/templates/repo/pulls/fragments/pullActions.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullActions.html
@@ -1,4 +1,4 @@
-{{ define "fragments/pullActions" }}
+{{ define "repo/pulls/fragments/pullActions" }}
   {{ $lastIdx := sub (len .Pull.Submissions) 1 }}
   {{ $roundNumber := .RoundNumber }}
 
