--- a/appview/pages/templates/repo/pulls/patch.html
+++ b/appview/pages/templates/repo/pulls/patch.html
@@ -72,6 +72,6 @@
   </div>
 
   <section>
-    {{ template "fragments/diff" (list .RepoInfo.FullName .Diff) }}
+    {{ template "repo/fragments/diff" (list .RepoInfo.FullName .Diff) }}
   </section>
 {{ end }}
