--- a/appview/pages/templates/user/profile.html
+++ b/appview/pages/templates/user/profile.html
@@ -247,7 +247,7 @@
         </div>
 
         {{ if ne .FollowStatus.String "IsSelf" }}
-            {{ template "fragments/follow" . }}
+            {{ template "user/fragments/follow" . }}
         {{ end }}
     </div>
 {{ end }}
