--- a/appview/pages/templates/repo/pulls/fragments/pullResubmit.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullResubmit.html
@@ -1,4 +1,4 @@
-{{ define "fragments/pullResubmit" }}
+{{ define "repo/pulls/fragments/pullResubmit" }}
   <div
       id="resubmit-pull-card"
       class="rounded relative border bg-amber-50 dark:bg-amber-900 border-amber-200 dark:border-amber-500 px-6 py-2">
