appview: pages: fix fragments glob

--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -176,9 +176,7 @@
                         <a
                             href="/{{ $.RepoInfo.FullName }}/commit/{{ .Hash.String }}"
                             class="text-gray-500 dark:text-gray-400 no-underline hover:underline"
-                            >{{ slice .Hash.String 0 8 }}</a
-                        >
-                    </span>
+                            >{{ slice .Hash.String 0 8 }}</a></span>
                     <span
                         class="mx-2 before:content-['·'] before:select-none"
                     ></span>
