appview: implement interdiff
this is pretty garbage, hard to read and pretty sure it dosent work

--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -58,6 +58,13 @@
                href="/{{ $.RepoInfo.FullName }}/pulls/{{ $.Pull.PullId }}/round/{{.RoundNumber}}">
               {{ i "file-diff" "w-4 h-4" }} <span class="hidden md:inline">view patch</span>
             </a>
+              {{ if not (eq .RoundNumber 0) }}
+              <a class="btn flex items-center gap-2 no-underline hover:no-underline p-2"
+                 hx-boost="true"
+                 href="/{{ $.RepoInfo.FullName }}/pulls/{{ $.Pull.PullId }}/round/{{.RoundNumber}}/interdiff">
+                {{ i "file-diff" "w-4 h-4" }} <span class="hidden md:inline">interdiff</span>
+              </a>
+              {{ end }}
             {{ end }}
           </div>
         </summary>
