appview: did resolution exclusion list

--- a/appview/pages/templates/timeline.html
+++ b/appview/pages/templates/timeline.html
@@ -23,7 +23,7 @@
   </div>
   <div class="italic text-lg">
     tightly-knit social coding, <a href="/login" class="underline inline-flex gap-1 items-center">join now {{ i "arrow-right" "w-4 h-4" }}</a>
-    <p class="pt-5 px-10 text-sm text-gray-500 dark:text-gray-400">Join our IRC channel: <a href="https://web.libera.chat/#tangled"><code>#tangled</code> on Libera Chat</a>.
+    <p class="pt-5 px-10 text-sm text-gray-500 dark:text-gray-400">Join our <a href="https://chat.tangled.sh">Discord</a>or IRC channel: <a href="https://web.libera.chat/#tangled"><code>#tangled</code> on Libera Chat</a>.
     Read an introduction to Tangled <a href="https://blog.tangled.sh/intro">here</a>.</p>
   </div>
 </div>
