--- a/appview/pages/templates/user/login.html
+++ b/appview/pages/templates/user/login.html
@@ -70,7 +70,7 @@
                     </button>
                 </form>
                 <p class="text-sm text-gray-500">
-                    Join our IRC channel:
+                    Join our <a href="https://chat.tangled.sh">Discord</a> or IRC channel:
                     <a href="https://web.libera.chat/#tangled"
                         ><code>#tangled</code> on Libera Chat</a
                     >.
