appview: pages: embed syntax highlighting for code

--- a/appview/pages/templates/repo/blob.html
+++ b/appview/pages/templates/repo/blob.html
@@ -59,6 +59,7 @@
         </p>
     {{ else }}
     <div class="overflow-auto relative">
+        <link rel="stylesheet" href="/static/syntax.css">
         {{ if .ShowRendered }}
         <div id="blob-contents" class="prose dark:prose-invert">{{ .RenderedContents }}</div>
         {{ else }}
